# robot.bicycle

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
analysis/: CMakeLists.txt  mainwindow.cc
cmake/Modules/: FindMatlab.cmake
design/: CMakeLists.txt  control_design_functions.cc  control_design_functions.h  firmware_generator.cc  full_order_observer.cc  matlab_interface.cc.in  matlab_interface.h  parameter_check.cc  robot_bicycle_parameters.h
firmware/: CMakeLists.txt  openocd.cfg  toolchain-arm-none-eabi.cmake
firmware/src/: CMakeLists.txt  constants.h  control_loop-inl.h  control_loop.cpp  gitsha.cpp.in  gitsha.h  main.cpp  mcuconf.h  pindef.h  rear_motor_controller.cpp  rear_motor_controller.h  test.cpp  textutilities.cpp  textutilities.h  vector_table.h
